Fixed panel container overlapping button container on mobile

--- a/Front-End Developer/button-component/src/components/Canvas/Buttons/Buttons.css
+++ b/Front-End Developer/button-component/src/components/Canvas/Buttons/Buttons.css
@@ -1,4 +1,7 @@
-.Buttons { margin-left: 40px; }
+.Buttons { 
+    padding-left: 40px; 
+    height: 50%;
+}
 
 .Buttons h2 {
     margin-top: 40px;
@@ -11,5 +14,6 @@
         display: flex;
         flex-flow: column;
         align-items: center;
+        margin-top: 50px;
     }
 }
