--- a/Front-End Developer/button-component/src/components/Canvas/Canvas.css
+++ b/Front-End Developer/button-component/src/components/Canvas/Canvas.css
@@ -4,9 +4,3 @@
     flex-flow: column;
     justify-content: space-between;
 }
-
-@media only screen and (max-width: 750px) {
-    .Canvas { 
-        /* display: none; */
-    }
-}
