--- a/Front-End Developer/button-component/src/components/Canvas/Panel/Panel.css
+++ b/Front-End Developer/button-component/src/components/Canvas/Panel/Panel.css
@@ -2,6 +2,7 @@
 .Panel { 
     border-top: 1px solid #cccccc;
     font-size: 14px;
+    height: 50%;
 }
 
 .tab { padding: 12px 0; }
